fixed categories to wrap if theres not enough space

--- a/css/style.css
+++ b/css/style.css
@@ -309,12 +309,12 @@ nav {
     }
 
     .categories {
-        position: sticky;
-        margin-top: 20px;
+
     }
 
     .categories ul {
         display: flex;
+        flex-wrap: wrap;
         gap: 20px;
     }
 }
